<resources>
    <string name="app_name">智铁云</string>

    <string name="home_page">首页</string>
    <string name="more">更多</string>
    <string name="mine">我的</string>
    <string name="personal_data">个人资料</string>
    <string name="my_message">我的消息</string>
    <string name="clear_cache">清除缓存</string>
    <string name="system_settings">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="invite_friends">邀请好友</string>
    <string name="sex">性别 :</string>
    <string name="age">年龄 :</string>
    <string name="address">地址 :</string>
    <string name="phone_no">手机 :</string>
    <string name="click_settings">点击设置</string>
    <string name="accomplish">完成</string>
    <string name="change_password">修改密码</string>
    <string name="account_management">账号管理</string>
    <string name="privacy_policy">隐私协议</string>
    <string name="language_switch">语言切换</string>

    <string name="simplified_chinese">简体中文</string>
    <string name="chinese_traditional">繁体中文</string>
    <string name="american_english">美式英文</string>
    <string name="system_default">系统默认</string>
    <string name="is_already">已经是</string>
    <string name="wait_tip">正在初始化语言包，请稍等！</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="user_agreement">\t\t\t\t在此特别提醒您（用户）在注册成为用户之前，请认真阅读本《用户协议》（以下简称“协议”），确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。</string>
    <string name="registration">一、账号注册</string>
    <string name="registration_content">\t\t\t\t1、用户在使用本服务前需要注册一个“智慧工地”账号。“智慧工地”账号应当使用手机号码绑定注册，请用户使用尚未与“智慧工地”账号绑定的手机号码，以及未被服务根据本协议封禁的手机号码注册“智慧工地”账号。服务可以根据用户需求对账号注册和绑定的方式进行变更，而无须事先通知用户。 \n\t\t\t\t2、鉴于“智慧工地”账号的绑定注册方式，您同意服务在注册时将允许您的手机号码及手机设备识别码等信息用于注册。</string>
    <string name="protect_information">二、用户个人隐私信息保护</string>
    <string name="account_agreement">账号管理</string>
    <string name="add_or_register">添加或注册账号</string>
    <string name="safe_withdrawing">安全退出</string>
    <string name="personnel_management">人员管理</string>
    <string name="safety_management">安全管理</string>
    <string name="quality_control">质量管理</string>
    <string name="material_monitoring">物料监测</string>
    <string name="schedule_management">进度管理</string>
    <string name="training_and_check">培训考核</string>
    <string name="ai_monitoring">AI监控</string>
    <string name="shop_integral">积分商城</string>
    <string name="credits_exchange">积分兑换</string>
    <string name="my_integral">我的积分</string>
    <string name="for_record">兑换记录</string>
    <string name="buy_points">积分充值</string>
    <string name="flush">刷新</string>
    <string name="available_integral">可用积分</string>
    <string name="confirm">确定</string>
    <string name="rich_scan">扫一扫</string>
    <string name="TestRecords">考试记录</string>
    <string name="my_grade">我的成绩</string>
    <string name="join_test">参加考试</string>
    <string name="safety_management_system">安全管理系统</string>
    <string name="after_rectification">待整改</string>
    <string name="manager">管理人员</string>
    <string name="contract_workers">劳务人员</string>
    <string name="forget_the_password">忘记密码</string>
    <string name="update_pass_success">密码重置成功</string>
    <string name="hidden_trouble_report">隐患上报</string>
    <string name="inspection_record">检查记录</string>
    <string name="RectificationNotice">整改通知单</string>
    <string name="the_rectification_report">整改上报</string>
    <string name="check_the_rectification">整改复查</string>
    <string name="qualified">合格</string>
    <string name="disqualification">不合格</string>
    <string name="quantity_analysis_of_hidden_danger">隐患数量分析</string>
    <string name="comprehensive_hidden_danger_analysis">综合隐患分析</string>
    <string name="risk_analysis_of_subcontractor">分包单位隐患分析</string>
    <string name="the_training_class">培训课堂</string>
    <string name="section">标段:</string>
    <string name="station">站点:</string>
    <string name="units">单位</string>
    <string name="department">部门:</string>
    <string name="effectivity">有效</string>
    <string name="invalid">无效</string>
    <string name="invalid_records">无效记录</string>
    <string name="quality_control_system">质量管理系统</string>
    <string name="complete_test">完成考试</string>
    <string name="online_signature">在线签名</string>

</resources>
