<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.lsy.wisdombuid.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="34dp"
                android:layout_marginRight="@dimen/margin"
                android:lineHeight="22dp"
                android:minHeight="22dp"
                android:text="@string/user_agreement"
                android:textColor="@color/three"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/btn_circular"
                android:text="@string/registration"
                android:textColor="@color/three"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginRight="@dimen/margin"
                android:lineHeight="22dp"
                android:minHeight="22dp"
                android:text="@string/registration_content"
                android:textColor="@color/three"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/btn_circular"
                android:text="@string/protect_information"
                android:textColor="@color/three"
                android:textSize="16sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginRight="@dimen/margin"
                android:lineHeight="22dp"
                android:minHeight="22dp"
                android:text="@string/registration_content"
                android:textColor="@color/three"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>