<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">

    <com.lsy.wisdombuid.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/set_account_management"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="Setting"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/account_management"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/set_privacy_agreement"
        android:onClick="Setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/privacy_policy"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/set_language"
        android:onClick="Setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/language_switch"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />



</LinearLayout>