<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mine_top_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_68"
            android:paddingTop="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="我的"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mine_persion_data_line"
            android:onClick="persionData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/head_img"
                android:layout_width="@dimen/dp_90"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_21"
                android:layout_marginBottom="@dimen/dp_21"
                android:src="@mipmap/mine_head" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mine_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="18824632510"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mime_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="轮回少年"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>


        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="46dp"-->
        <!--android:drawableLeft="@mipmap/mine_fatie"-->
        <!--android:drawableRight="@mipmap/into_hui"-->
        <!--android:drawablePadding="@dimen/margin_six"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingLeft="@dimen/margin"-->
        <!--android:paddingRight="@dimen/margin"-->
        <!--android:text="个人资料"-->
        <!--android:textColor="@color/two"-->
        <!--android:textSize="14sp" />-->

    </LinearLayout>


    <TextView
        android:id="@+id/mine_persion_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableLeft="@mipmap/mine_ziliao"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="persionData"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/personal_data"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/mine_my_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableLeft="@mipmap/mine_xiaoxi"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="persionData"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/my_message"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/mine_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableLeft="@mipmap/mine_clean"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="persionData"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/clear_cache"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/mine_system_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableLeft="@mipmap/mine_setting"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="persionData"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/system_settings"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/mine_about_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableLeft="@mipmap/mine_aboutus"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="persionData"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/about_us"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />

    <TextView
        android:id="@+id/mine_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_12"
        android:drawableLeft="@mipmap/mine_yaoqing"
        android:drawableRight="@mipmap/black_into"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:onClick="persionData"
        android:paddingLeft="@dimen/dp_21"
        android:paddingRight="@dimen/dp_21"
        android:text="@string/invite_friends"
        android:textColor="@color/three"
        android:textSize="15sp" />

    <TextView
        style="@style/fenge"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16" />


</LinearLayout>